# synctmux

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  configure.ac
src/: Makefile.am  main.cpp  std_cin.cpp  std_cin.hpp  synctmux.conf.in  synctmux.in
